--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:configChanges="keyboard|keyboardHidden|navigation|orientation|screenSize|screenLayout"
         android:exported="true">
         <intent-filter>
-        <action android:name="android.intent.action.Main"/>
+        <action android:name="android.intent.action.MAIN"/>
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
     </activity>
